might actually work this time..

--- a/include/header.html
+++ b/include/header.html
@@ -10,32 +10,32 @@
 	
 	<nav> 
 		<!-- main navigation (always visible) -->
-		<ul>
+		<ul id="mainnav">
 			<li><a href="/index.php" name="indexnav"> Front Page </a></li>
 			<li class ="topnav" id="1">
 				<a href="/math/index.php" name="mathnav" >Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
-					<li><a href="/math/education.php"> Education </a> </li>
-					<li><a href="/math/research.php"> Research </a> </li>
+					<li class="topnav"><a href="/math/education.php"> Education </a> </li>
+					<li class="topnav"><a href="/math/research.php"> Research </a> </li>
 				</ul>
 			</li>
 			<li class="topnav" id="2">
 				<a href="/computing/index.php" name="computingnav" >Computing </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
-					<li><a href="/computing/education.php"> Education </a> </li>
-					<li><a href="/computing/completedprojects.php"> Completed Projects </a> </li>
-					<li><a href="/computing/currentprojects.php"> Current Projects </a> </li>
+					<li class="topnav"><a href="/computing/education.php"> Education </a> </li>
+					<li class="topnav"><a href="/computing/completedprojects.php"> Completed Projects </a> </li>
+					<li class="topnav"><a href="/computing/currentprojects.php"> Current Projects </a> </li>
 				</ul>
 			</li class="topnav" id="3">
 			<li>
 				<a href="/gamedesign/index.php" name="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
-						<li><a href="/gamedesign/design.php"> Design</a> </li>
-						<li><a href="/gamedesign/artworkandassets.php"> Artwork and Assets </a> </li>
-						<li><a href="/gamedesign/games.php"> Games </a> </li>
+						<li class="topnav"><a href="/gamedesign/design.php"> Design</a> </li>
+						<li class="topnav"><a href="/gamedesign/artworkandassets.php"> Artwork and Assets </a> </li>
+						<li class="topnav"><a href="/gamedesign/games.php"> Games </a> </li>
 					</ul>
 			</li>
 			<li><a href="/blog/index.php" name="blognav">Blog</a></li>
