wow I wish I could test locally..

--- a/include/header.html
+++ b/include/header.html
@@ -28,8 +28,8 @@
 					<li class="topnav"><a href="/computing/completedprojects.php"> Completed Projects </a> </li>
 					<li class="topnav"><a href="/computing/currentprojects.php"> Current Projects </a> </li>
 				</ul>
-			</li class="topnav" id="3">
-			<li>
+			</li >
+			<li class="topnav" id="3">
 				<a href="/gamedesign/index.php" name="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
