--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,14 @@ form table input[type=submit]
 	padding: 20px 0px;
 	margin-left:10px;
 }
+#formoutput pre
+{
+	white-space: pre-wrap;       /* CSS 3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 /*responsive design*/
 @media screen and (max-width: 1550px)
 {
