fixing a margin issue.. this project never ends

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ table {
 
 }
 body{
-	padding-bottom: 150px; /* gives the page some breathing room */
+	margin-bottom: 150px; /* gives the page some breathing room */
 }
 
 /*header css*/
