--- a/include/header.html
+++ b/include/header.html
@@ -23,10 +23,10 @@
 				<a href="/math/index.php" name="edunav" >Education</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
-					<li class="topnav"><a href="/education/education.php?action=Computing"> Computing </a> </li>
-					<li class="topnav"><a href="/education/education.php?action=Mathematics"> Mathematics </a> </li>
-					<li class="topnav"><a href="/education/education.php?action=GameDesign"> Game Design </a> </li>
-					<li class="topnav"><a href="/education/education.php?action=Coursework"> Coursework </a> </li>
+					<li class="topnav"><a href="/education/education.php?action=computing"> Computing </a> </li>
+					<li class="topnav"><a href="/education/education.php?action=mathematics"> Mathematics </a> </li>
+					<li class="topnav"><a href="/education/education.php?action=gamedesign"> Game Design </a> </li>
+					<li class="topnav"><a href="/education/education.php?action=coursework"> Coursework </a> </li>
 				</ul>
 			</li>
 			
