--- a/include/header.html
+++ b/include/header.html
@@ -20,7 +20,7 @@
 				</ul>
 			</li >
 			<li class ="topnav" id="1">
-				<a href="/math/index.php" name="edunav" >Education</a>
+				<a href="/education/education.php" name="edunav" >Education</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
 					<li class="topnav"><a href="/education/education.php?action=computing"> Computing </a> </li>
