--- a/include/header.html
+++ b/include/header.html
@@ -12,11 +12,11 @@
 				<a href="/projects/projects.php" name="projectnav" >Projects </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
-					<li class="topnav"><a href="/projects/projects.php?action=Wyvern"> Wyvern Engine </a> </li>
-					<li class="topnav"><a href="/projects/projects.php?action=Research"> Math Undergraduate Research</a> </li>
-					<li class="topnav"><a href="/projects/projects.php?action=Apotheoun"> Apotheoun </a> </li>
-					<li class="topnav"><a href="/projects/projects.php?action=UI"> Application Design </a> </li>
-					<li class="topnav"><a href="/projects/projects.php?action=3D"> 3D Modelling </a> </li>
+					<li class="topnav"><a href="/projects/projects.php?action=wyvern"> Wyvern Engine </a> </li>
+					<li class="topnav"><a href="/projects/projects.php?action=research"> Math Undergraduate Research</a> </li>
+					<li class="topnav"><a href="/projects/projects.php?action=apotheoun"> Apotheoun </a> </li>
+					<li class="topnav"><a href="/projects/projects.php?action=ui"> Application Design </a> </li>
+					<li class="topnav"><a href="/projects/projects.php?action=3d"> 3D Modelling </a> </li>
 				</ul>
 			</li >
 			<li class ="topnav" id="1">
