--- a/css/styles.css
+++ b/css/styles.css
@@ -48,31 +48,31 @@ table {
 
 
 /*load fonts*/
+
 @font-face {
-    font-family: 'acrosstheroad';
-    src: url('../media/fonts/acrosstheroad-webfont.eot');
-    src: url('../media/fonts/acrosstheroad-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../media/fonts/acrosstheroad-webfont.woff2') format('woff2'),
-         url('../media/fonts/acrosstheroad-webfont.woff') format('woff'),
-         url('../media/fonts/acrosstheroad-webfont.ttf') format('truetype'),
-         url('../media/fonts/acrosstheroad-webfont.svg#acrosstheroad') format('svg');
+    font-family: 'wcManoNegra';
+    src: url('wcmanonegraboldbta-webfont.eot');
+    src: url('wcmanonegraboldbta-webfont.eot?#iefix') format('embedded-opentype'),
+         url('wcmanonegraboldbta-webfont.woff2') format('woff2'),
+         url('wcmanonegraboldbta-webfont.woff') format('woff'),
+         url('wcmanonegraboldbta-webfont.ttf') format('truetype'),
+         url('wcmanonegraboldbta-webfont.svg#wc_mano_negra_btabold') format('svg');
     font-weight: normal;
     font-style: normal;
 
 }
-
 @font-face {
     font-family: 'roundedElegance';
-    src: url('../media/fonts/roundedElegance.ttf');
+    src: url('roundedelegance-webfont.eot');
+    src: url('roundedelegance-webfont.eot?#iefix') format('embedded-opentype'),
+         url('roundedelegance-webfont.woff2') format('woff2'),
+         url('roundedelegance-webfont.woff') format('woff'),
+         url('roundedelegance-webfont.ttf') format('truetype'),
+         url('roundedelegance-webfont.svg#rounded_eleganceregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
 }
-
-
-
-
-
 
 
 @font-face {
@@ -88,13 +88,6 @@ table {
 
 }
 
-@font-face {
-    font-family:'epmarugo';
-    src: url('../japanese/media/fonts/epmarugo.ttf');
-    font-weight: normal;
-    font-style: normal;
-
-}
 body{
 	margin-bottom: 150px; /* gives the page some breathing room */
 }
@@ -109,9 +102,9 @@ header{
 	height:130px;
 	
 }
-#logo span{
+#logo a{
 	
-	font-family:acrosstheroad;
+	font-family:wcManoNegra;
 	font-size:2.5em;
 	padding-right:.5em;
 	
