--- a/css/styles.css
+++ b/css/styles.css
@@ -51,24 +51,24 @@ table {
 
 @font-face {
     font-family: 'wcManoNegra';
-    src: url('wcmanonegraboldbta-webfont.eot');
-    src: url('wcmanonegraboldbta-webfont.eot?#iefix') format('embedded-opentype'),
-         url('wcmanonegraboldbta-webfont.woff2') format('woff2'),
-         url('wcmanonegraboldbta-webfont.woff') format('woff'),
-         url('wcmanonegraboldbta-webfont.ttf') format('truetype'),
-         url('wcmanonegraboldbta-webfont.svg#wc_mano_negra_btabold') format('svg');
+    src: url('../media/fonts/wcmanonegraboldbta-webfont.eot');
+    src: url('../media/fonts/wcmanonegraboldbta-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/wcmanonegraboldbta-webfont.woff2') format('woff2'),
+         url('../media/fonts/wcmanonegraboldbta-webfont.woff') format('woff'),
+         url('../media/fonts/wcmanonegraboldbta-webfont.ttf') format('truetype'),
+         url('../media/fonts/wcmanonegraboldbta-webfont.svg#wc_mano_negra_btabold') format('svg');
     font-weight: normal;
     font-style: normal;
 
 }
 @font-face {
     font-family: 'roundedElegance';
-    src: url('roundedelegance-webfont.eot');
-    src: url('roundedelegance-webfont.eot?#iefix') format('embedded-opentype'),
-         url('roundedelegance-webfont.woff2') format('woff2'),
-         url('roundedelegance-webfont.woff') format('woff'),
-         url('roundedelegance-webfont.ttf') format('truetype'),
-         url('roundedelegance-webfont.svg#rounded_eleganceregular') format('svg');
+    src: url('../media/fonts/roundedelegance-webfont.eot');
+    src: url('../media/fonts/roundedelegance-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/roundedelegance-webfont.woff2') format('woff2'),
+         url('../media/fonts/roundedelegance-webfont.woff') format('woff'),
+         url('../media/fonts/roundedelegance-webfont.ttf') format('truetype'),
+         url('../media/fonts/roundedelegance-webfont.svg#rounded_eleganceregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
