--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ header{
 	font-family:wcManoNegra;
 	font-size:2.5em;
 	padding-right:.5em;
-	
+	color:#1F1A21;
 }
 #logo{
 	background-image:url("../media/logo.svg");
