--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,10 @@ header{
 	color:#1F1A21;
 }
 #logo{
-	background-image:url("../media/logo.svg");
+	/*background-image:url("../media/logo.svg");
 	background-repeat:no-repeat;
 	background-position:left;
-	background-size: contain;
+	background-size: contain;*/
 	display:inline-block;
 	padding-left: 3.75em;
 	padding-top:1em;
@@ -122,7 +122,7 @@ header{
 /*navigation css*/
 
 nav{
-	 
+	display:block; 
 	position:relative; 
 	top:60px; 
 	width:80%;
@@ -138,7 +138,6 @@ nav ul li{
 	list-style-type: none;
 	list-style-position:inside;
 	font-size:1em;
-	width:250px;
 	text-align: center;
 	position:relative;
 	padding-top:5px;
