--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -13,7 +13,7 @@ div#graphic img{
 main{
 	top: 20%;
 	width:90%;
-	font-family:'roundedElegance';
+	font-family:'robotocondensed';
 	margin-left:10%;
 	
 	
