--- a/css/gallery.css
+++ b/css/gallery.css
@@ -11,14 +11,14 @@
 	padding: 10px 0px;
 }
 #sidebar a{
-	font-family: nobilityCasual;
+	font-family: averia;
 	font-size: .8em;	
 }
 #gallery{
 	margin-left:11%;
 }
 .gallerytitle{
-	font-family:nobilityCasual;
+	font-family:averia;
 	font-size: 1.5em;
 	margin-left:5px;
 	margin-bottom:0px;
