--- a/css/education.css
+++ b/css/education.css
@@ -44,6 +44,7 @@ section ul li{
 #mathedu, #compedu, #gameedu, #coursework
 {
 	display:none;
+	font-size:2.5em;
 }
 @media screen and (max-width: 1024px)
 {
