--- a/css/education.css
+++ b/css/education.css
@@ -40,11 +40,14 @@ section ul li{
 	font-size: .9em;
 		
 }
-
+#mathtitle, #computingtitle, #gametitle, #coursetitle
+{
+	font-size:2.5em;
+}
 #mathedu, #compedu, #gameedu, #coursework
 {
 	display:none;
-	font-size:2.5em;
+	
 }
 @media screen and (max-width: 1024px)
 {
