--- a/css/projects.css
+++ b/css/projects.css
@@ -25,4 +25,7 @@
 	color:white;
 	display:inline-block;
 }
-
+#wyvernproject,#researchproject,#apotheounproject,#uiproject,#3dproject
+{
+	display:none;
+}
