more styling changes

--- a/css/projects.css
+++ b/css/projects.css
@@ -26,7 +26,7 @@
 	color:white;
 	display:inline-block;
 }
-#mathtitle, #computingtitle, #gametitle, #coursetitle
+#wyvern,#research,#apotheoun,#ui,#3d
 {
 	font-size:2em;
 }
