--- a/css/projects.css
+++ b/css/projects.css
@@ -29,6 +29,7 @@
 #wyvern,#research,#apotheoun,#ui,#3d
 {
 	font-size:2em;
+	cursor:pointer;
 }
 #wyvernproject,#researchproject,#apotheounproject,#uiproject,#3dproject
 {
