--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,6 @@ nav{
 	position:relative; 
 	top:60px; 
 	margin-left:10%;
-	width:80%;
 	margin-right:10%;
 	}
 
@@ -151,15 +150,15 @@ nav ul li{
 	list-style-type: none;
 	list-style-position:inside;
 	font-size:1em;
-	width:250px;
+	width:400px;
 	text-align: center;
 	position:relative;
+	display:inline-block;
 	
 }
 
 nav ul li a{ 
 	padding: 5px 20px; 
-	display:block;
 	text-decoration:none;
 	font-family:robotocondensed;
 	color: #FFF;
@@ -189,7 +188,6 @@ ul.dropdown{
 	padding-left:0px;
 	position:absolute;
 	left:0px;
-	overflow:hidden;
 
 }
 ul.dropdown li{
