--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ nav ul li{
 	text-align: center;
 	position:relative;
 	display:inline-block;
-	
+	padding: 5px 20px;
 	
 }
 
@@ -163,8 +163,8 @@ nav ul li a{
 	text-decoration:none;
 	font-family:robotocondensed;
 	color: #FFF;
-	padding: 5px 20px;
-	font-size:1.2em;
+	font-size:1.1em;
+	display:inline-block;
 }
 #current a{
 	background-color:white;
