for real this time

--- a/include/header.html
+++ b/include/header.html
@@ -8,8 +8,8 @@
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul id="mainnav">
-			<li class="topnav" id="2">
-				<a href="/projects/projects.php" name="projectnav" >Projects </a>
+			<li class="topnav" id="2" name="projectnav">
+				<a href="/projects/projects.php"  >Projects </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
 					<li class="topnav"><a href="/projects/projects.php?action=wyvern"> Wyvern Engine </a> </li>
@@ -19,8 +19,8 @@
 					<li class="topnav"><a href="/projects/projects.php?action=3d"> 3D Modelling </a> </li>
 				</ul>
 			</li >
-			<li class ="topnav" id="1">
-				<a href="/education/education.php" name="edunav" >Education</a>
+			<li class ="topnav" id="1" name="edunav" >
+				<a href="/education/education.php" >Education</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
 					<li class="topnav"><a href="/education/education.php?action=computing"> Computing </a> </li>
@@ -30,10 +30,10 @@
 				</ul>
 			</li>
 			
-			<li>
-				<a href="/aboutme.php" name="aboutnav">About Me</a>
+			<li name="aboutnav">
+				<a href="/aboutme.php" >About Me</a>
 			</li>
-			<li><a href="/contact.php" name="contactnav" > Contact </a> </li>
+			<li name="contactnav" ><a href="/contact.php" > Contact </a> </li>
 			<li><a href="/Resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
