updated portfolio and resume

--- a/include/header.html
+++ b/include/header.html
@@ -17,6 +17,7 @@
 					<li class="topnav"><a href="/projects/projects.php?action=apotheoun"> Apotheoun </a> </li>
 					<li class="topnav"><a href="/projects/projects.php?action=ui"> Application Design </a> </li>
 					<li class="topnav"><a href="/projects/projects.php?action=3d"> 3D Modelling </a> </li>
+					<li class="topnav"><a href="/projects/projects.php?action=ggj"> Global Game Jam 2016 </a> </li>
 				</ul>
 			</li >
 			<li class ="topnav" id="1" name="edunav" >
