--- a/css/projects.css
+++ b/css/projects.css
@@ -26,12 +26,12 @@
 	color:white;
 	display:inline-block;
 }
-#wyvern, #research, #apotheoun, #ui, #model
+#wyvern, #research, #apotheoun, #ui, #model, #ggj
 {
 	font-size:2em;
 	cursor:pointer;
 }
-#wyvernproject,#researchproject,#apotheounproject,#uiproject,#modelproject
+#wyvernproject,#researchproject,#apotheounproject,#uiproject,#modelproject, #ggjproject
 {
 	display:none;
 }
