--- a/include/header.html
+++ b/include/header.html
@@ -1,34 +1,22 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
+<script src="javascript/globals.js"></script>
+<script src="../javascript/section.js"></script>
 <script>
+$(document).ready(function(){
 
-$(document).ready(function(){$(".topnav").hover(function(e){
+$(".topnav").hover(function(e){
     $(this).children('.dropdown').slideDown(200);
-},function(e){$(this).children('.dropdown').slideUp(200);})});
+},function(e){$(this).children('.dropdown').slideUp(200);});
 
-//does the browser support local storage?
-//if not, switch to static site.
-function supportsLocalStorage()
-{
-  try {
-    return 'localStorage' in window && window['localStorage'] !== null;
-  } catch (e) {
-    return false;
-  }
-}
+var section = getGlobal("project");
+$("#"+section).addClass("subcurr");
 
-function setGlobal(page, value)
-{
-  if(!supportsLocalStorage())
-	{
-		//switch to static site
-	}
-   localStorage[page] = value;
-}
- </script>
+});
+</script>
 
 
 <header> 
-	<div id="logo"> <a href="/index.php">Margaret Dorsey</a></div>
+	<div id="logo"> <a href="index.html">Margaret Dorsey</a></div>
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul id="mainnav">
@@ -36,46 +24,46 @@ function setGlobal(page, value)
 				<a href="/projects/projects.php"  >Projects </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
-					<li class="topnav"><a href="/projects/projects.html" 
-						onclick="setGlobal(project, wyvern)"> Wyvern Engine </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, research)"> Math Undergraduate Research</a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, apotheoun)"> Apotheoun </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, design)"> Application Design </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, modelling)"> 3D Modelling </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, ggj)"> Global Game Jam 2016 </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, androids)"> Androids, Assemble! </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, primality)"> Primality Testing </a> </li>
-					<li class="topnav"><a href="/projects/projects.html"
-						onclick="setGlobal(project, geomAlg)"> Geometric Algebra </a> </li>
+					<li class="topnav"><a href="projects/projects.html" 
+						onclick="setGlobal('project', 'wyvern')"> Wyvern Engine </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'research')"> Math Undergraduate Research</a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'apotheoun')"> Apotheoun </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'ui')"> Application Design </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'model')"> 3D Modelling </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'ggj')"> Global Game Jam 2016 </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'androids')"> Androids, Assemble! </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'primality')"> Primality Testing </a> </li>
+					<li class="topnav"><a href="projects/projects.html"
+						onclick="setGlobal('project', 'geomAlg')"> Geometric Algebra </a> </li>
 				</ul>
 			</li >
 			<li class ="topnav" id="1" name="edunav" >
 				<a href="/education/education.php" >Education</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
-					<li class="topnav"><a href="/education/education.html"
-						<li class="topnav"><a href="/projects/projects.html"
+					<li class="topnav"><a href="education/education.html"
+						<li class="topnav"><a href="projects/projects.html"
 						onclick="setGlobal(education, computing)"> Computing </a> </li>
-					<li class="topnav"><a href="/education/education.html"
+					<li class="topnav"><a href="education/education.html"
 						onclick="setGlobal(education, math)"> Mathematics </a> </li>
-					<li class="topnav"><a href="/education/education.html"
+					<li class="topnav"><a href="education/education.html"
 						onclick="setGlobal(education, gamedesign)"> Game Design </a> </li>
-					<li class="topnav"><a href="/education/education.html"
+					<li class="topnav"><a href="education/education.html"
 						onclick="setGlobal(education, coursework)"> Coursework </a> </li>
 				</ul>
 			</li>
 			
 			<li name="aboutnav">
-				<a href="/aboutme.html" >About Me</a>
+				<a href="aboutme.html" >About Me</a>
 			</li>
-			<li><a href="/resume.html">Resume</a></li>
+			<li><a href="resume.html">Resume</a></li>
 		</ul>		
 	</nav>
 </header>
