--- a/css/projects.css
+++ b/css/projects.css
@@ -29,17 +29,20 @@
 #wyvern, #research, #apotheoun, #ui, #model, #ggj, #primality, #geomAlg, #androids
 {
 	display:none;
+	position:relative;
+	left:20%;
 }
 
 #projectSubnav li
 {
 	cursor:pointer;
+	padding:10px;
 }
 #projectSubnav
 {
-	width:20%;
+	width:15%;
 	float:left;
-	background-color:blue;
+	position:fixed;
 }
 
 
