--- a/css/projects.css
+++ b/css/projects.css
@@ -6,10 +6,10 @@
 	border-width: 2px; 
 	border-radius:3px;
 	margin-left:10px;
-	width:90%;
+	width:80%;
 	display:none;
 	position:relative;
-	left:30%;
+	left:15%;
 }
 
 .project h2{
@@ -44,6 +44,7 @@
 	width:15%;
 	float:left;
 	position:fixed;
+	top:200px; /*start off below the header*/
 }
 
 
