--- a/css/resume.css
+++ b/css/resume.css
@@ -1,32 +1,40 @@
+
 @font-face{
 	font-family:robotoCondensed;
-	src: url(Roboto-Condensed.ttf);
+	src: url(../media/fonts/Roboto-Condensed.ttf);
 }
 @font-face{
 	font-family:cnr;
-	src: url(CodeNewRomanb.otf);
+	src: url(../media/fonts/CodeNewRomanb.otf);
 }
 @font-face{
 	font-family:robotoBlack;
-	src: url(Roboto-Black.ttf);
+	src: url(../media/fonts/Roboto-Black.ttf);
 }
 @font-face{
 	font-family:wcm;
-	src: url(WCManoNegraBoldBta.ttf);
+	src: url(../media/fonts/wcmanonegraboldbta-webfont.ttf);
 }
-@font-face{font-family:averia; src:url(AveriaSerif-Light.ttf);}
+@font-face{font-family:averia; src:url(../media/fonts/AveriaSerif-Light.ttf);}
+
+
+
+.toplink{margin-left: 20px; margin-top:50px; margin-bottom: 50px; display:block; 
+			text-decoration:none; color:  #B20100; }
+
 body
 {
 	padding-top:0px;
-	width:760px;
+	width:auto;
 	font-family:robotoCondensed;
 	font-size:10pt;
 }
 hr{
-	width:90%;
+	width:100%;
 	margin:auto;
 	border-color:#b20100;
 	background-color:#b20100;
+	margin-bottom:20px;
 }
 h1{ color:#1f1a21; font-size:14pt; font-family:averia; font-weight:normal;
 margin-bottom: 0px; clear:both; padding-top:8px; padding-bottom:0px;
